# my-ai-projects

./: .gitignore  README.md
bedrock/: getting started with bedrock.ipynb
bedrock/enhanced-visual-search/: vector-search-demo.ipynb
bedrock/similarity-search/: README.md  embed-image-with-bedrock.ipynb  home.py
clip/: clip.ipynb
crewai/my_first_crew/: pyproject.toml  report.md
crewai/philosopher_crew/: pyproject.toml  report.md
crewai/philosopher_crew/knowledge/: user_preference.txt
crewai/philosopher_crew/src/philosopher_crew/: crew.py  main.py
crewai/philosopher_crew/src/philosopher_crew/config/: agents.yaml  tasks.yaml
feature-engineering/: feature-engineering.ipynb
langchain/ai-policy-check/: aipolicy.ipynb  chroma.sqlite3
llava/: README.md  app.py  caption_with_lava.py  llava.py
marvin/: bedrock_openai_researcher.py  bedrock_researcher.py  chat_with_cloudinary.py  custom_tool.py  generated_draft_with_added_image.md  hello_world.py  ollama_researcher.py  openai_researcher.py  test.md
ollama/: ollama-function-calling-basic.ipynb
pydantic/: 01_pydantic_intro.ipynb  02_pydantic_advanced.ipynb  README.md  fast_api_integration.py
qdrant/: 001_create_dataset.py  002_add_data_to_qdrant.py  003_neural_searcher.py  005_service.py  006_simple_vector_and_bm25.py  007_create_embeddings_from_blogs.py  008_load_blogs.py  009_search_blog.py  010_search_ui.py  011_combined_index.py  012_search_blog_hybrid.py  013_search_upgraded_ui.py  README.md  embeddings.jsonl  hello.py  neural_search_with_city_filter_004.py  pull_metadata.py
(+56 files in other folders)
