[project]
name = "philosopher_crew"
version = "0.1.0"
description = "my-first-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0"
]

[project.scripts]
philosopher_crew = "philosopher_crew.main:run"
run_crew = "philosopher_crew.main:run"
train = "philosopher_crew.main:train"
replay = "philosopher_crew.main:replay"
test = "philosopher_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
